:recycle: Refactor UI components and fix layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -84,9 +84,6 @@
   p {
     @apply text-pretty;
   }
-  textarea {
-    form-sizing: content;
-  }
 }
 @layer components {
   .zoom-image [data-rmiz-modal-overlay='visible'] {
@@ -94,24 +91,16 @@
   }
 
   .zoom-image [data-rmiz-modal-content] > button {
-    @apply absolute right-0 top-0 m-4 flex items-center justify-center rounded-full bg-background/10 text-foreground;
+    @apply cursor-pointer bg-background/10 text-foreground;
   }
 
   .zoom-image [data-rmiz-modal-img] {
     @apply rounded-md lg:rounded-2xl;
   }
-  .zoom-image [data-rmiz-modal-overlay],
-  .zoom-image [data-rmiz-modal-img] {
-    transition: all 0.3s ease-in-out;
-  }
-  .zoom-image [data-rmiz-btn-unzoom] {
-    background-color: #000;
-    color: #fff;
-  }
 
-  .zoom-image [data-rmiz-btn-zoom] {
-    background-color: #000;
-    color: #fff;
+  .zoom-image [data-rmiz-btn-unzoom],
+  [data-rmiz-btn-zoom] {
+    @apply bg-background/10 text-foreground;
   }
 }
 
